--- a/web-start/index.html
+++ b/web-start/index.html
@@ -107,10 +107,20 @@
   </main>
 </div>
 
-<!-- Firebase -->
-<!-- ***********************************************************************************************************************
-     * TODO(DEVELOPER): Paste the initialization snippet from: Firebase Console > Overview > Add Firebase to your web app. *
-     *********************************************************************************************************************** -->
+
+<script src="https://www.gstatic.com/firebasejs/3.6.8/firebase.js"></script>
+<script>
+  // Initialize Firebase
+  var config = {
+    apiKey: "AIzaSyDzPPSs3C7FLzAv-AY9EQjxgmB2TSyYHfo",
+    authDomain: "chat-f1c12.firebaseapp.com",
+    databaseURL: "https://chat-f1c12.firebaseio.com",
+    storageBucket: "chat-f1c12.appspot.com",
+    messagingSenderId: "423280868001"
+  };
+  firebase.initializeApp(config);
+</script>
+
 <script src="scripts/main.js"></script>
 </body>
 </html>
